# ckanext-datarequests

./: .ahoy.yml  .env  .flake8  .gitignore  .travis.yml  MANIFEST.in  README.md  docker-compose.yml  requirements-dev.txt  setup.cfg  setup.py  test.ini
.circleci/: build.sh  config.yml  process-artifacts.sh  test.sh
.docker/: Dockerfile.ckan  test.ini
.docker/scripts/: ckan_cli  create-test-data.sh  doctor.sh  init-ext.sh  init.sh  serve.sh
.github/workflows/: test.yml
ckanext/: __init__.py
ckanext/datarequests/: actions.py  auth.py  common.py  constants.py  db.py  helpers.py  plugin.py  request_helpers.py  validator.py
ckanext/datarequests/controllers/: controller_functions.py  ui_controller.py
ckanext/datarequests/fanstatic/: datarequest_close.js  edit_comment.js
ckanext/datarequests/i18n/: ckanext-datarequests.pot
ckanext/datarequests/i18n/pt-BR/: pt-BR.po
ckanext/datarequests/i18n/pt_BR/: pt_BR.po
ckanext/datarequests/plugin/: __init__.py  flask_plugin.py  pylons_plugin.py
ckanext/datarequests/public/: datarequests.css
ckanext/datarequests/templates/: header.html
ckanext/datarequests/templates/admin/: config.html
ckanext/datarequests/tests/: test_actions.py  test_actions_data.py  test_auth.py  test_common.py  test_db.py  test_helpers.py  test_plugin.py  test_pylons_plugin.py  test_selenium.py  test_ui_controller.py  test_validator.py
test/features/: comments.feature  datarequest.feature  datarequest_circumstances.feature  environment.py  homepage.feature  login.feature
test/features/steps/: steps.py
(+45 files in other folders)
