[metadata]
description-file = README.md

[nosetests]
ckan=1
with-pylons=/app/ckan/default/production.ini

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datarequests/i18n/ckanext-datarequests.pot
width = 80

[init_catalog]
domain = ckanext-datarequests
input_file = ckanext/datarequests/i18n/ckanext-datarequests.pot
output_dir = ckanext/datarequests/i18n

[update_catalog]
domain = ckanext-datarequests
input_file = ckanext/datarequests/i18n/ckanext-datarequests.pot
output_dir = ckanext/datarequests/i18n

[compile_catalog]
domain = ckanext-datarequests
directory = ckanext/datarequests/i18n
statistics = true
